# web-starter-rs

./: .env.example  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
migrations/: 0001_setup.down.sql  0001_setup.up.sql
src/: config.rs  error.rs  lib.rs  main.rs  prelude.rs
src/handlers/: error.rs  mod.rs  todos.rs
src/models/: mod.rs  todo.rs
tests/: todos.rs  utils.rs
