[package]
name = "web-starter-rs"
authors = ["morlinbrot <morlinbrot@example.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = [
    "tls-rustls",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
tokio = { version = "1.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.15.0", features = ["fast-rng", "v4", "serde"] }
